--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 <title>AnaeleHomePage</title>
-</head> <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-<body>
+   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="css/default.css">
+</head> 
+  <body>
     <nav id="headnav">
       <ul>
       <li>  <a href="homepage.html" target="_blank">HOME</a> </li>
