--- a/contactme.html
+++ b/contactme.html
@@ -11,7 +11,7 @@
       <li>  <a href="homepage.html" target="_blank">HOME</a> </li>
       <li> <a href="cv.html" target="_blank">CV</a> </li>
      <li> <a href="projects.html" target="_blank">PROJECTS</a> </li>
-     <li> <a href="aboutme.html" target="_blank">CONTACT</a> </li>
+     <li> <a href="contactme.html" target="_blank">CONTACT</a> </li>
       </ul>
         </nav>
     <div id="mainimage">
