--- a/contactme.html
+++ b/contactme.html
@@ -3,7 +3,7 @@
 <head>
 <title>AnaeleCVPage</title>
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="contactme.css">
 </head>
 <body>
     <nav id="headnav">
