--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>AnaeleHomePage</title>
    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-  <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="index.css">
 </head> 
   <body>
     <nav id="headnav">
